; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_opt.c_opt_streamid.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_opt.c_opt_streamid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8**, i32 }

@AV_LOG_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [70 x i8] c"Invalid value '%s' for option '%s', required syntax is 'index:value'\0A\00", align 1
@OPT_INT = common dso_local global i32 0, align 4
@MAX_STREAMS = common dso_local global i64 0, align 8
@INT_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @opt_streamid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opt_streamid(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_2__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca [16 x i8], align 16
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = bitcast i8* %11 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %12, %struct.TYPE_2__** %7, align 8
  %13 = getelementptr inbounds [16 x i8], [16 x i8]* %10, i64 0, i64 0
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @av_strlcpy(i8* %13, i8* %14, i32 16)
  %16 = getelementptr inbounds [16 x i8], [16 x i8]* %10, i64 0, i64 0
  %17 = call i8* @strchr(i8* %16, i8 signext 58)
  store i8* %17, i8** %9, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %26, label %20

20:                                               ; preds = %3
  %21 = load i32, i32* @AV_LOG_FATAL, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @av_log(i32* null, i32 %21, i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0), i8* %22, i8* %23)
  %25 = call i32 @exit_program(i32 1)
  br label %26

26:                                               ; preds = %20, %3
  %27 = load i8*, i8** %9, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %9, align 8
  store i8 0, i8* %27, align 1
  %29 = load i8*, i8** %5, align 8
  %30 = getelementptr inbounds [16 x i8], [16 x i8]* %10, i64 0, i64 0
  %31 = load i32, i32* @OPT_INT, align 4
  %32 = load i64, i64* @MAX_STREAMS, align 8
  %33 = sub nsw i64 %32, 1
  %34 = call i8* @parse_number_or_die(i8* %29, i8* %30, i32 %31, i32 0, i64 %33)
  %35 = ptrtoint i8* %34 to i32
  store i32 %35, i32* %8, align 4
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i8**, i8*** %37, align 8
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 1
  %41 = load i32, i32* %8, align 4
  %42 = add nsw i32 %41, 1
  %43 = call i8** @grow_array(i8** %38, i32 8, i32* %40, i32 %42)
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  store i8** %43, i8*** %45, align 8
  %46 = load i8*, i8** %5, align 8
  %47 = load i8*, i8** %9, align 8
  %48 = load i32, i32* @OPT_INT, align 4
  %49 = load i64, i64* @INT_MAX, align 8
  %50 = call i8* @parse_number_or_die(i8* %46, i8* %47, i32 %48, i32 0, i64 %49)
  %51 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 0
  %53 = load i8**, i8*** %52, align 8
  %54 = load i32, i32* %8, align 4
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i8*, i8** %53, i64 %55
  store i8* %50, i8** %56, align 8
  ret i32 0
}

declare dso_local i32 @av_strlcpy(i8*, i8*, i32) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i8*, i8*) #1

declare dso_local i32 @exit_program(i32) #1

declare dso_local i8* @parse_number_or_die(i8*, i8*, i32, i32, i64) #1

declare dso_local i8** @grow_array(i8**, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
